[package]
name = "au-host"
version = "0.0.1"
edition = "2021"
description = "Audio Unit (AUv2) plugin hosting for macOS via AudioToolbox framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
